Closed Bug 301004 Opened 21 years ago Closed 20 years ago

filepicker runs non-modally

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: chpe, Assigned: chpe)

References

Details

(Keywords: fixed1.8)

Attachments

(1 file)

Steps to reproduce: 0) Open a page with a <input type=file> in Epiphany 1) Click the Browse button Expected results: The filepicker is modal to the window. Actual result: The filepicker is not modal; you can navigate the window and for example navigate away from the page that showed the filepicker. Patch following.
Attached patch proposed fixSplinter Review
The window needs to be added to its transient parent's window group.
Assignee: blizzard → chpe
Status: NEW → ASSIGNED
Attachment #189514 - Flags: superreview?(blizzard)
Attachment #189514 - Flags: review?(caillon)
Attachment #189514 - Flags: review?(caillon) → review+
*** Bug 271816 has been marked as a duplicate of this bug. ***
Comment on attachment 189514 [details] [diff] [review] proposed fix we should land this on trunk for embedders
Attachment #189514 - Flags: superreview?(blizzard)
Attachment #189514 - Flags: superreview+
Attachment #189514 - Flags: approval1.8b4?
(Note: this is not just an embedding fix, this affects the normal browser's file chooser as well.)
Attachment #189514 - Flags: approval1.8b4? → approval1.8b4+
HEAD: Checking in widget/src/gtk2/nsFilePicker.cpp; /cvsroot/mozilla/widget/src/gtk2/nsFilePicker.cpp,v <-- nsFilePicker.cpp new revision: 1.11; previous revision: 1.10 done MOZILLA_1_8_BRANCH: Checking in widget/src/gtk2/nsFilePicker.cpp; /cvsroot/mozilla/widget/src/gtk2/nsFilePicker.cpp,v <-- nsFilePicker.cpp new revision: 1.10.4.1; previous revision: 1.10 done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
Blocks: 310137
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: