bug 301004 make native gtk2 filepicker modal to its parent patch by Christian Persch <chpe@gnome.org> r=caillon sr=roc a=asa